# image-quality-fusion

./: .gitignore  LICENSE  MODEL_CARD.md  README.md  deploy_to_hf.py  main.py  pyproject.toml
configs/: default.yaml  spaq.yaml
datasets/demo/: annotations.csv
datasets/spaq/: Readme.txt  exif_data.csv  mos_scores.csv  scene_labels.csv
docs/: DEPLOYMENT.md  PROJECT_STRUCTURE.md
scripts/: download_spaq.py  monitor_training.py  preprocess_spaq.py  run_training.sh  train_spaq.py
scripts/deployment/: deploy_to_hf.py  simple_deploy_to_hf.py  update_hf_model_card.py
scripts/monitoring/: monitor_hf_deployment.py  simple_hf_test.py  test_hf_model.py  test_standalone_hf.py
scripts/training/: monitor_training.py  run_training.sh
scripts/utils/: create_model_card.py  debug_hf_upload.py
src/image_quality_fusion/data/: preprocessing.py  spaq_preprocessing.py
src/image_quality_fusion/models/: aesthetic_predictor_original.py  brisque_opencv.py  clip_model.py  fusion_model.py  huggingface_wrapper.py
src/image_quality_fusion/tests/: __init__.py  run_tests.py  test_aesthetic_original.py  test_brisque_opencv.py  test_clip.py  test_fusion_training.py  test_pipeline.py
src/image_quality_fusion/training/: data_utils.py  evaluate.py  train_fusion.py  trainer.py
src/image_quality_fusion/utils/: paths.py
